--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-qrcode-generator",
-  "homepage": "https://travolgi.github.io/react-qrcode-generator",
+  "homepage": "https://Rjrijo123.github.io/QR_generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
